TestCases/Errors/MultipleReportFiles/run.bat
..\..\..\Build\windows\spm -r -i MPD.dat -u > Expected.log
